# my-first-cnn

./: README.md  pyproject.toml  setup.bat  setup.sh
.databricks/: .databricks.env  project.json
notebook/: trial.ipynb
scripts/: main.py
scripts/classes/: data_cleaning.py  first_class.py  model.py
