[tool.poetry]
name = "my-first-repo"
version = "0.1.0"
description = ""
authors = ["Davide Motta <davide.motta@luxottica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.1.3"
numpy = "^1.26.2"
matplotlib = "3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
