[tool.poetry]
name = "my-first-repo"
version = "0.1.0"
description = ""
authors = ["Davide Motta <davide.motta@luxottica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.1.3"
numpy = "^1.26.2"
matplotlib = "3.7.1"
databricks-connect = "^14.1.0"
databricks = "^0.2"
tqdm = "^4.66.1"
torch = "^2.1.0"
tensorflow = "^2.15.0"
torchvision = "^0.16.0"
keras = "^2.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
